# taskl

./: JSONTree.hs  LICENSE  Makefile  README  TaskL.hs  TryAgain.hs  dataflow  example.hs  extensions.bash  frame.bash  if-examples.bash  model.bash  rc-files.yaml  task.hs  taskl.cabal  taskl.hs
Data/ByteString/: EncDec.hs
Data/Text/: EncDec.hs
Language/: TaskL.hs
Language/TaskL/: Bash.hs  BashTemplate.hs  Code.hs  Codegen.hs  Combination.hs  EncDec.hs  IdemShell.hs  IndexForest.hs  Macros.hs  Name.hs  Op.hs  Override.hs  Schedule.hs  StringL.hs  Syntax.hs  Task.hs  YAML.hs
Language/TaskL/Bash/: Template.hs
Language/TaskL/Bash/Codegen/: Utils.hs
Language/TaskL/Codegen/: IdemShell.hs  Utils.hs
Language/TaskL/IdemShell/: ID.hs  Nick.hs  PasswdDB.hs  Path.hs
Language/TaskL/Op/: Parser.hs
System/: TaskL.hs
System/TaskL/: Bash.hs  BashCodegen.hs  CLI.hs  Combination.hs  Compiler.hs  Forest.hs  IdemShell.hs  IndexForest.hs  JSON.hs  JSONTree.hs  Macros.hs  Op.hs  Parser.hs  Phases.hs  Schedule.hs  Strings.hs  Task.hs
System/TaskL/Bash/: Codegen.hs  PrettyPrinter.hs  Program.hs  Template.hs
System/TaskL/Bash/Codegen/: IdemShell.hs  Utils.hs
System/TaskL/IdemShell/: ID.hs  Nick.hs  PasswdDB.hs  Path.hs
System/TaskL/Op/: Parser.hs
bash/: argv.bash  for-in.bash  idemsh.bash  model.bash  set-e.bash  source.bash
doc/: Makefile  conf.py  index.rst
example/: README  db.bash  example.bash  example.yaml  servers.yaml  web.bash
experiments/: username_bytes.bash
notes/: messages  yaml-embedding
