name                          : taskl
version                       : 0.0.0
category                      : Text
license                       : BSD3
license-file                  : LICENSE
author                        : Jason Dusek
maintainer                    : oss@solidsnack.be 
homepage                      : http://github.com/solidsnack/taskl/
synopsis                      : Configure UNIX systems.
description                   : Configure UNIX systems.


cabal-version                 : >= 1.2.3
build-type                    : Simple
extra-source-files            : README
data-files                    : example/example.bash


library
  build-depends               : base >= 2 && <= 5
                              , containers >= 0.3 && < 0.4
                              , text >= 0.9
                              , bytestring >= 0.9
                              , numbers >= 2007.9.24
                              , uu-parsinglib >= 2.5
                              , shell-escape >= 0.1
                              , mtl >= 2 && < 3
                              , binary >= 0.5 && < 0.6
                              , SHA >= 1.4 && < 2
                              , yaml-light >= 0.1.4 && < 0.2
                              , template-haskell >= 2.4 && <3
  exposed-modules             : Language.TaskL
  extensions                  : EmptyDataDecls
                                FlexibleInstances
                                GeneralizedNewtypeDeriving
                                MultiParamTypeClasses
                                NamedFieldPuns
                                NoMonomorphismRestriction
                                OverlappingInstances
                                OverloadedStrings
                                ParallelListComp
                                PostfixOperators
                                RecordWildCards
                                ScopedTypeVariables
                                StandaloneDeriving
                                TemplateHaskell
                                TupleSections
                                TypeFamilies
                                UndecidableInstances

